# sf-operator

./: .ansible-lint  .gitignore  .gitreview  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.md  Containerfile  Dockerfile  FedoraDockerfile  LICENSE  Makefile  PROJECT  README.md  configuration.dhall  create-ingress.sh  flake.nix  go.mod  go.sum  main.go  mkdocs-requirements.txt  mkdocs.yml  setup.py  sf-operator.cabal  sf_operator  sfcli.yaml  sfconfig.yaml  staticcheck.conf  tox.ini  watches.yaml
ansible/: gerrit.yaml  sf.yaml  software-factory.yaml
ci/: cr.yaml  cr_spec.yaml  local.yaml  render.sh
cli/: config.go  run.go  setup-tenant.go
conf/: Kubernetes.dhall  KubernetesUnion.dhall  Operator.dhall  Prelude.dhall
controllers/: backup.go  capacity.go  cgit.go  clean.go  config.go  configcheckjob_controller.go  context.go  etherpad.go  gateway.go  gerrit.go  gerritbot.go  git_server.go  grafana.go  hound-search.go  hound.go  jaeger.go  keycloak.go  lodgeit.go  logjuicer.go  logserver.go  logserver_controller.go  logserver_test.go  main.go  managesf-resources.go  managesf.go  mariadb.go  mosquitto.go  murmur.go  mysql.go  nodepool.go  opensearch.go  opensearchdashboards.go  postfix.go  secrets.go  softwarefactory_controller.go  softwarefactory_controller_test.go  suite_test.go  utils.go  volumestats_exporter.go  weeder.go  (+5 more)
deploy/: crd.yaml  operator.yaml  rbac.yaml  scc.yaml
doc/: README.md  _config.yml  index.md
docs/: README.md
hack/: RenderSchemas.hs  boilerplate.go.txt  build-api-doc.sh  create-ps.sh  dashboards.sh  deploy-version.sh  deploy.sh  destroy.sh  (+9 more)
(+664 files in other folders)
